veel kord mõjude hindamine

--- a/08-mojude_hindamine.Rmd
+++ b/08-mojude_hindamine.Rmd
@@ -1,4 +1,8 @@
 
+
+# (PART) Mõjude hindamine {-} 
+
+
 ```{r setup, include=FALSE}
 
 knitr::opts_chunk$set(warning = F, message = F, fig.width = 7, fig.height=4, fig.topcaption=TRUE)
